@@ -4,6 +4,7 @@ hinic (0+git20250605+6.6.0-95.0.0-2) UNRELEASED; urgency=low
   * Add patch to fix build error when CONFIG_DCB is not enabled
   * Add patch to fix build error when CONFIG_VLAN_8021Q is not enabled
   * Add patch to fix build error when CONFIG_PCI_IOV is not enabled
+  * Add workflow to check build on multiple kernel versions
 
  -- Miao Wang <shankerwangmiao@gmail.com>  Thu, 10 Jul 2025 19:16:00 +0800
 
